--- a/_posts/2015-05-11-welcome.markdown
+++ b/_posts/2015-05-11-welcome.markdown
@@ -7,4 +7,4 @@ excerpt: "Welcoming post."
 ---
 <strike>Welcome to City 17. You have chosen, or been chosen, to relocate to one of our finest remaining urban centers.</strike>
 
-I mean, uh, hello! Welcome to my site. There's not much here yet. I might make posts here, but there's always other things over at [TechShroom Studios](http://techshoom.com), my "company" of sorts. Have fun exploring!
+I mean, uh, hello! Welcome to my site. There's not much here yet. I might make posts here, but there's always other things over at [TechShroom Studios](http://techshroom.com), my "company" of sorts. Have fun exploring!
